mejoras portfolio skills1

--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
                 <div class="hero-info">
                     <h2>Habilidades</h2>
                     <ul class="skills">
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="Html">
                             <img src="/images/skills/html5-original-wordmark.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="Css">
                             <img src="/images/skills/css3-original-wordmark.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="JavaScript">
                             <img src="/images/skills/javascript-original.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="React">
                             <img src="/images/skills/react-original-wordmark.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="Bootstrap">
                             <img src="/images/skills/bootstrap-plain-wordmark.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="Tailwindcss">
                             <img src="/images/skills/tailwindcss-icon.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="ChartJs">
                             <img src="/images/skills/logo-title.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="Git">
                             <img src="/images/skills/git-scm-icon.svg" alt="logo-skill">
                         </li>
                     </ul>
@@ -137,10 +137,10 @@
                 <div class="hero-info">
                     <h3>También Trabajo Con</h3>
                     <ul class="skills">
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="Figma">
                             <img src="/images/skills/figma-icon.svg" alt="logo-skill">
                         </li>
-                        <li class="skills-icon">
+                        <li class="skills-icon" title="Adobe Photoshop">
                             <img src="/images/skills/Adobe_Photoshop_CC_icon.svg" alt="logo-skill">
                         </li>
                     </ul>
@@ -221,11 +221,11 @@
         </div>
         <div class="testimonial-card">
             <img src="/images/Notebook tu1ahorro Mockup.jpg" alt="mockup" class="tu1ahorro-image">
-            <!-- <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M17 7l-10 10"></path>
                 <path d="M8 7l9 0l0 9"></path>
-             </svg></button> -->
+             </svg></button>
         </div>
         <div class="small-card">
             <div class="work-title-wrap-2">
@@ -245,6 +245,63 @@
                         <a class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
                         <a class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
                         <a class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="small-card">
+            <div class="work-title-wrap-2">
+                <div class="work-tag">
+                    landing
+                </div>
+                <h2>Landing Page en React</h2>
+                <p>Mi primer proyecto en React ✨ Descubre mi landing page, fruto de mi pasión como desarrollador frontend. Realizado con motivo para una experiencia de usuario cautivadora</p>
+                <div class="card-bottom">
+                    <a href="https://landingreactjs.netlify.app/" target="_blank" class="button-external-site">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M17 7l-10 10"></path>
+                        <path d="M8 7l9 0l0 9"></path>
+                     </svg>
+                    </a>
+                    <div class="d-flex">
+                        <a class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
+                        <a class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
+                        <a class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
+                        <a class="lenguaje-button" title="React"><i class="fa-brands fa-react"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tu1ahorro-card" id="Proyectos">
+            <img src="/images/LandingReact.jpg" alt="mockup" class="tu1ahorro-image">
+        </div>
+        <div class="testimonial-card">
+            <img src="/images/landingmobile.jpg" alt="mockup" class="tu1ahorro-image">
+            <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M17 7l-10 10"></path>
+                <path d="M8 7l9 0l0 9"></path>
+             </svg></button>
+        </div>
+        <div class="small-card">
+            <div class="work-title-wrap-2">
+                <div class="work-tag">
+                    landing
+                </div>
+                <h2>Landing Page en React</h2>
+                <p>Descubre mi landing page, fruto de mi pasión como desarrollador frontend. Realizado con motivo para una experiencia de usuario cautivadora</p>
+                <div class="card-bottom">
+                    <a href="https://landingreactjs.netlify.app/" target="_blank" class="button-external-site">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M17 7l-10 10"></path>
+                        <path d="M8 7l9 0l0 9"></path>
+                     </svg>
+                    </a>
+                    <div class="d-flex">
+                        <a class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
+                        <a class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
+                        <a class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
+                        <a class="lenguaje-button" title="React"><i class="fa-brands fa-react"></i></a>
                     </div>
                 </div>
             </div>
