mejoras fotos carousel

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
             <div class="carousel">
                 <div class="slides">
                   <img src="/images/Dubai_camisa.jpg" alt="Imagen 1">
-                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 2">
-                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 3">
+                  <img src="/images/pc.jpg" alt="Imagen 2">
+                  <img src="/images/pc2.jpg" alt="Imagen 3">
                   <img src="/images/Dubai_camisa.jpg" alt="Imagen 4">
-                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 5">
+                  <img src="/images/pc.jpg" alt="Imagen 5">
                 </div>
                 <div class="dots">
                     <div class="dot"></div>
