--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="icon"></div>
         </div>
         <ul>
+            <h1 class="navigation-marquee">Trabajemos Juntos</h1>
             <li>
                 <a href="#">
                     <span>Inicio</span>
