--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="hero-column-right">
-                    <h1>Algunas Palabras Sobre Mi</h1>
+                    <h1>Algunas Palabras Sobre Mí</h1>
                     <div class="wrapper">
                         <p>¡Hola! soy Leonel Chaparro, Argentino y apasionado desarrollador frontend con experiencia en la creación de páginas web atractivas y funcionales. Para mí, el desarrollo frontend es como un hobby, me encanta porque siento que estoy creando, me expreso a través del diseño en los detalles y en el que puedo dar vida a web únicas.</p>
                         <button class="btn-primary">Contacto</button>
@@ -309,7 +309,7 @@
         </div>
         <!-- Footer -->
         <div class="contact-card" id="Contact">
-            <h1>CONTACTAME</h1>
+            <h1>CONTÁCTAME</h1>
             <div class="contact-block">
                 <a href="#" class="contact-social-icon" title="Mail"><i class="fa-solid fa-envelope"></i></a>
                 <a href="#" class="contact-social-icon" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
