--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
             <h1>CONTÁCTAME</h1>
             <div class="contact-block">
                 <a href="#" class="contact-social-icon" title="Mail"><i class="fa-solid fa-envelope"></i></a>
-                <a href="#" class="contact-social-icon" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="contact-social-icon" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="contact-social-icon" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" class="contact-social-icon" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100081061434149" class="contact-social-icon" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/leonel_street/" class="contact-social-icon" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/LeonelStreet14" class="contact-social-icon" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/leonel-chaparro/" class="contact-social-icon" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
             </div>
             <h5>Leonel Chaparro</h5>
         </div>
