--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonel Chaparro UI & UX Design Portfolio</title>
-    <link rel="icon" href="/images/Icono2.png">
+    <link rel="icon" href="/images/icono2.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -93,13 +93,13 @@
                      </svg>
                     </a>
                 </div>
-                <img src="/images/Mockup Tu1estilo.jpg" alt="mockup" class="tu1estilo-image">
+                <img src="/images/Mockup-Tu1estilo.webp" alt="mockup" class="tu1estilo-image">
             </div>
         </div>
         <!-- Section -->
         <div class="hero-card">
             <div class="hero-image">
-                <img src="/images/Leonel Chaparro.png" alt="hero-image">
+                <img src="/images/Leonel Chaparro.png" alt="Desarrollador Frontend">
             </div>
             <div class="hero-content">
                 <div class="hero-info">
@@ -152,11 +152,11 @@
         <div class="hero-right">
             <div class="carousel">
                 <div class="slides">
-                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 1">
-                  <img src="/images/pc.jpg" alt="Imagen 2">
-                  <img src="/images/pc2.jpg" alt="Imagen 3">
-                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 4">
-                  <img src="/images/pc.jpg" alt="Imagen 5">
+                  <img src="/images/mobile-projects2.jpg" alt="Imagen 1">
+                  <img src="/images/dubai-camisa.webp" alt="Imagen 2">
+                  <img src="/images/pc.webp" alt="Imagen 3">
+                  <img src="/images/mobile-projects.jpg" alt="Imagen 4">
+                  <img src="/images/latop-projects.jpg" alt="Imagen 5">
                 </div>
                 <div class="dots">
                     <div class="dot"></div>
@@ -174,16 +174,16 @@
             <div class="slider-card">
                 <!-- grande -->
                 <div class="slide">
-                    <img src="/images/Mockup Ipad.jpg" alt="slide-image">
+                    <img src="/images/Mockup-Ipad.webp" alt="slide-image">
                 </div>
                 <div class="slide">
-                    <img src="/images/Mockup prueba.jpg" alt="slide-image">
+                    <img src="/images/Mockup-prueba.webp" alt="slide-image">
                 </div>
                 <div class="slide">
                     <img src="/images/Mockup Android.jpg" alt="slide-image">
                 </div>
                 <div class="slide">
-                    <img src="/images/Notebook tu1ahorro Mockup.jpg" alt="slide-image">
+                    <img src="/images/Notebook-tu1ahorro-Mockup.webp" alt="slide-image">
                 </div>
 
                 <div class="slider-indicator">
@@ -221,7 +221,7 @@
             <img src="/images/Floating Ipad y Iphone.jpg" alt="mockup" class="tu1ahorro-image">
         </div>
         <div class="testimonial-card">
-            <img src="/images/Notebook tu1ahorro Mockup.jpg" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/Notebook-tu1ahorro-Mockup.webp" alt="mockup" class="tu1ahorro-image">
             <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M17 7l-10 10"></path>
@@ -274,10 +274,10 @@
             </div>
         </div>
         <div class="tu1ahorro-card" id="Proyectos">
-            <img src="/images/LandingReact.jpg" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/landingreact.webp" alt="mockup" class="tu1ahorro-image">
         </div>
         <div class="testimonial-card">
-            <img src="/images/landingmobile.jpg" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/landingmobile.webp" alt="mockup" class="tu1ahorro-image">
             <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M17 7l-10 10"></path>
