--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="hero-about">
                 <div class="hero-column">
                     <div class="hero-custom">
-                        <img src="/images/Leonel-About.jpg" alt="Profile">
+                        <img src="/images/Leonel-Hero.jpg" alt="Profile">
                     </div>
                 </div>
                 <div class="hero-column-right">
