--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <!-- Section -->
         <div class="hero-card">
             <div class="hero-image">
-                <img src="/images/Leonel Chaparro.png" alt="Desarrollador Frontend">
+                <img src="/images/Leonel-Ch.png" alt="Desarrollador Frontend">
             </div>
             <div class="hero-content">
                 <div class="hero-info">
@@ -153,7 +153,7 @@
             <div class="carousel">
                 <div class="slides">
                   <img src="/images/mobile-projects2.jpg" alt="Imagen 1">
-                  <img src="/images/dubai-camisa.webp" alt="Imagen 2">
+                  <img src="/images/carousel-preg.jpg" alt="Imagen 2">
                   <img src="/images/pc.webp" alt="Imagen 3">
                   <img src="/images/mobile-projects.jpg" alt="Imagen 4">
                   <img src="/images/latop-projects.jpg" alt="Imagen 5">
