--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
                 <a href="https://www.instagram.com/leonel_street/" class="contact-social-icon" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://twitter.com/LeonelStreet14" class="contact-social-icon" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/leonel-chaparro/" class="contact-social-icon" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/leonel-chaparro/" class="contact-social-icon" title="Github"><i class="fa-brands fa-github"></i></a>
             </div>
             <h5>Leonel Chaparro</h5>
         </div>
