--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#edeef0">
     <title>Leonel Chaparro UI & UX Design Portfolio</title>
     <link rel="icon" href="/images/icono2.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
