--- a/index.html
+++ b/index.html
@@ -312,12 +312,12 @@
         <div class="contact-card" id="Contact">
             <h1>CONTÁCTAME</h1>
             <div class="contact-block">
-                <a href="#" class="contact-social-icon" title="Mail"><i class="fa-solid fa-envelope"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100081061434149" class="contact-social-icon" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/leonel_street/" class="contact-social-icon" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://twitter.com/LeonelStreet14" class="contact-social-icon" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/leonel-chaparro/" class="contact-social-icon" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/ChaparroAlberto?tab=repositories" class="contact-social-icon" title="Github"><i class="fa-brands fa-github"></i></a>
+                <a href="mailto:leoch46@hotmail.com.ar" class="contact-social-icon" title="Mail" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100081061434149" class="contact-social-icon" title="Facebook" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/leonel_street/" class="contact-social-icon" title="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/LeonelStreet14" class="contact-social-icon" title="Twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/leonel-chaparro/" class="contact-social-icon" title="Linkedin" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/ChaparroAlberto?tab=repositories" class="contact-social-icon" title="Github" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
             <h5>Leonel Chaparro</h5>
         </div>
