--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- Section -->
         <div class="hero-card">
             <div class="hero-image">
-                <img src="/images/Leonel-Ch.png" alt="Desarrollador Frontend">
+                <img src="/images/Leonel-Ch.png" alt="Desarrollador Frontend" loading="lazy">
             </div>
             <div class="hero-content">
                 <div class="hero-info">
@@ -153,11 +153,11 @@
         <div class="hero-right">
             <div class="carousel">
                 <div class="slides">
-                  <img src="/images/mobile-projects2.jpg" alt="Imagen 1">
-                  <img src="/images/carousel-preg.jpg" alt="Imagen 2">
-                  <img src="/images/pc.webp" alt="Imagen 3">
-                  <img src="/images/mobile-projects.jpg" alt="Imagen 4">
-                  <img src="/images/latop-projects.jpg" alt="Imagen 5">
+                  <img src="/images/mobile-projects2.webp" alt="Imagen 1" loading="lazy">
+                  <img src="/images/carousel-preg.webp" alt="Imagen 2" loading="lazy">
+                  <img src="/images/pc.webp" alt="Imagen 3" loading="lazy">
+                  <img src="/images/mobile-projects.webp" alt="Imagen 4" loading="lazy">
+                  <img src="/images/latop-projects.webp" alt="Imagen 5" loading="lazy">
                 </div>
                 <div class="dots">
                     <div class="dot"></div>
@@ -219,10 +219,10 @@
             </div>
         </div>
         <div class="tu1ahorro-card" id="Proyectos">
-            <img src="/images/Floating Ipad y Iphone.jpg" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/Floating Ipad y Iphone.jpg" alt="mockup" class="tu1ahorro-image" loading="lazy">
         </div>
         <div class="testimonial-card">
-            <img src="/images/Notebook-tu1ahorro-Mockup.webp" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/Notebook-tu1ahorro-Mockup.webp" alt="mockup" class="tu1ahorro-image" loading="lazy">
             <button class="floating-button" onclick="window.location.href='https://github.com/ChaparroAlberto/Ingresos-y-Egresos';"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M17 7l-10 10"></path>
@@ -275,10 +275,10 @@
             </div>
         </div>
         <div class="tu1ahorro-card" id="Proyectos">
-            <img src="/images/landingreact.webp" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/landingreact.webp" alt="mockup" class="tu1ahorro-image" loading="lazy">
         </div>
         <div class="testimonial-card">
-            <img src="/images/landingmobile.webp" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/landingmobile.webp" alt="mockup" class="tu1ahorro-image" loading="lazy">
             <button class="floating-button" onclick="window.location.href='https://github.com/ChaparroAlberto/page-reactjs';"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M17 7l-10 10"></path>
