minify js and fix buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#About">
                     <span>About</span>
                     <span>About</span>
                 </a>
@@ -60,10 +60,11 @@
                     </div>
                 </div>
                 <div class="hero-column-right">
-                    <h1>Algunas Palabras Sobre Mí</h1>
+                    <h1>Leonel Chaparro</h1>
+                    <h2>Frontend Developer</h2>
                     <div class="wrapper">
-                        <p>¡Hola! soy Leonel Chaparro, Argentino y apasionado desarrollador frontend con experiencia en la creación de páginas web atractivas y funcionales. Para mí, el desarrollo frontend es como un hobby, me encanta porque siento que estoy creando, me expreso a través del diseño en los detalles y en el que puedo dar vida a web únicas.</p>
-                        <button class="btn-primary">Contacto</button>
+                        <p>¡Hola! soy Argentino y apasionado desarrollador frontend con experiencia en la creación de páginas web atractivas y funcionales. Para mí, el desarrollo frontend es como un hobby, me encanta porque siento que estoy creando, me expreso a través del diseño en los detalles y en el que puedo dar vida a web únicas.</p>
+                        <button class="btn-primary" onclick="window.location.href='https:/www.linkedin.com/in/leonel-chaparro/';">Contacto</button>
                     </div>
                     <div class="wrapper"></div>
                     <div class="wrapper">
@@ -98,7 +99,7 @@
             </div>
         </div>
         <!-- Section -->
-        <div class="hero-card">
+        <div class="hero-card" id="About">
             <div class="hero-image">
                 <img src="/images/Leonel-Ch.png" alt="Desarrollador Frontend" loading="lazy">
             </div>
@@ -147,7 +148,7 @@
                         </li>
                     </ul>
                 </div>
-                <button class="btn-primary">Contacto</button>
+                <button class="btn-primary" onclick="window.location.href='https:/www.linkedin.com/in/leonel-chaparro/';">Contacto</button>
             </div>
         </div>
         <div class="hero-right">
